directing to supplier consignee address

--- a/app/views/bookings/booking_summary.html.erb
+++ b/app/views/bookings/booking_summary.html.erb
@@ -55,7 +55,7 @@
         <i class="fa fa-angle-double-left"></i>
         Go Back
       <%end%>
-      <%= link_to 'Submit',  '/bookings/payment', class: 'btn btn-success' %>
+      <%= link_to 'Submit',  '/address_books/add_supplier_consignee', class: 'btn btn-success' %>
     </div>
 
   </div>
