added z -index to display autocomlete on model

--- a/app/views/freights/_edit.html.erb
+++ b/app/views/freights/_edit.html.erb
@@ -15,11 +15,11 @@
           <div class="row form-group">
             <div class="col-md-6">
               <div class="col-md-3">From</div>
-              <div class="col-md-6"><%= country_select( "freight", "source", {}, { class: 'form-control selecter', required: 'required',:disabled => true }) %></div>
+              <div class="col-md-6"><%= f.select "source_id", options_from_collection_for_select(Location.all, "id", "full_address", f.object.source_id), {:include_blank=>true}, class: 'form-control source-auto-complete', placeholder: "Source", id: "source", required: 'required'  %></div>
             </div>
             <div class="col-xs-6">
               <div class="col-md-3">To</div>
-              <div class="col-md-6"><%= country_select( "freight", "destination", {}, { class: 'form-control selecter',required: 'required',:disabled => true}) %></div>
+              <div class="col-md-6"><%= f.select "destination_id", options_from_collection_for_select(Location.all, "id", "full_address", f.object.destination_id), {:include_blank=>true}, class: 'form-control source-auto-complete', placeholder: "Source", id: "source", required: 'required' %></div>
             </div>
 
           </div>
@@ -104,3 +104,15 @@
   <%end%>
 </div>
 
+
+
+<script>
+  $(function() {
+    $(".source-auto-complete" ).combobox();
+    $(".destination-auto-complete" ).combobox();
+  });
+</script>
+
+<style>
+  .ui-autocomplete {z-index: 1000000 !important;}
+</style>
