--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,10 @@
 <head>
   <%= render :partial => "layouts/head"%>
 </head>
-<body class="air-bg">
+<%
+  background_color = current_user && current_user.seller? ? "#f8f8f8" : "#cae5ff"
+%>
+<body class="air-bg" style="background-color: <%= background_color%>">
   <%= render :partial => "layouts/header" %>
     <% if  user_signed_in? && current_user.seller?  %>
       <%= render :partial => "layouts/seller_side_bar" %>
