--- a/app/views/layouts/_seller_side_bar.html.erb
+++ b/app/views/layouts/_seller_side_bar.html.erb
@@ -19,10 +19,10 @@
       <a class="list-group-item active" href="#b-menu" data-toggle="collapse">Booking</a>
       <ul class="aside-bar-submenu nav collapse" id="b-menu">
        <li>
-         <a href="/bookings/sellers_confirmed_bookings">Confirmed</a>
+         <a href="/bookings/confirmed">Confirmed</a>
        </li>
        <li>
-         <a href="/bookings/seller_confirmation_order">Pending Confirmation</a>
+         <a href="/bookings/pending">Pending Confirmation</a>
        </li>
        <li>
          <a href="#">Pending R1</a>
