added full_address to mailers

--- a/app/views/booking_mailer/buyer_active_booking.html.erb
+++ b/app/views/booking_mailer/buyer_active_booking.html.erb
@@ -1,7 +1,7 @@
 <div>Booking is active</div>
 <div>Booking Details </div>
-<div>from: <%=@booking.source%></div>
-<div>to: <%=@booking.destination%></div>
+<div>from: <%=@booking.source.full_address%></div>
+<div>to: <%=@booking.destination.full_address%></div>
 
 <div>
   Thanks,
