--- a/app/views/booking_mailer/seller_booking_rejection.text.erb
+++ b/app/views/booking_mailer/seller_booking_rejection.text.erb
@@ -1,7 +1,7 @@
 Booking is Rejected
 Booking Details
-from: <%=@booking.source%>
-to: <%=@booking.destination%>
+from: <%=@booking.source.full_address%>
+to: <%=@booking.destination.full_address%>
 Reason: <%=@booking.remark%>
 
 Thanks,
