changes for freight index page
added the changes for date picker

--- a/app/views/bookings/pending.html.erb
+++ b/app/views/bookings/pending.html.erb
@@ -76,8 +76,9 @@
                   </div>
                 </div>
                 <%end%>
-                </div>                                                                 
+                </div>
               </div>
+              <%= link_to "Freights", freights_path, :class => "btn btn-info", :method => :get  %>
             </div>
         </div>
       </div>
