--- a/app/views/freights/new.html.erb
+++ b/app/views/freights/new.html.erb
@@ -62,8 +62,8 @@
                           <div class="row form-group">
                             <div class="col-xs-6">
                               <div class="col-md-3">Date From</div>
-                              <div class="col-md-6 input-group date">
-                                <%= f.text_field "start_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
+                              <div class="col-md-6 input-group date" data-provide="datepicker">
+                                <%= f.text_field "start_date", class: "form-control",  placeholder: "yyyy/mm/dd", required: 'required','data-date-format'=> "yyyy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -71,8 +71,8 @@
                             </div>
                             <div class="col-xs-6">
                               <div class="col-md-3">Date To</div>
-                              <div class="col-md-6 input-group date">
-                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
+                              <div class="col-md-6 input-group date" data-provide="datepicker">
+                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', 'data-date-format'=> "yyyy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -102,19 +102,20 @@
                         </div>
 
                         <div class="row form-group">
-                          <div class="col-xs-6">
+                          <div class="col-xs-6" style="padding-left:25px">
                             <div class="col-md-3">Remark</div>
                             <div class="col-md-6"> <%= f.text_area :remark, class: "form-control", id: "hm-remark", placeholder: "Remark", required: 'required'%></div>
                           </div>
                         </div>
+                        <div class="control-group">
+                      <%= submit_tag 'Create', :class => 'btn btn-primary' %>
+                      <%= link_to t('.cancel', :default => t("helpers.links.cancel")), :class => 'btn btn-danger' %>
+                    </div>
 
                       </div>
 
                     </div>
-                    <div class="control-group">
-                      <%= submit_tag 'Create', :class => 'btn btn-primary' %>
-                      <%= link_to t('.cancel', :default => t("helpers.links.cancel")), :class => 'btn btn-danger' %>
-                    </div>
+                    
                 <%end%>
               </div>
             </div>
