--- a/app/views/home/buyer_landing.html.erb
+++ b/app/views/home/buyer_landing.html.erb
@@ -22,7 +22,7 @@
                               <label for="frm-search">
                                 From
                               </label>
-                              <%= select_tag('search[][source_id]', options_from_collection_for_select(Location.all, "id", "full_address", search_parameter['source_id']), include_blank: true, class: 'form-control source-auto-complete', placeholder: "Source", id: "source", required: 'required')%>
+                              <%= select_tag('search[][source_id]', options_from_collection_for_select(Port.all, "id", "port_name", search_parameter['source_id']), include_blank: true, class: 'form-control source-auto-complete', placeholder: "Source", id: "source", required: 'required')%>
                             </div>
                           </div>
 
@@ -31,7 +31,7 @@
                               <label for="to-search">
                                 To
                               </label>
-                              <%= select_tag('search[][destination_id]', options_from_collection_for_select(Location.all, "id", "full_address", search_parameter['destination_id']), include_blank: true, class: 'form-control destination-auto-complete', placeholder: "Source", id: "destination", required: 'required')%>
+                              <%= select_tag('search[][destination_id]', options_from_collection_for_select(Port.all, "id", "port_name", search_parameter['destination_id']), include_blank: true, class: 'form-control destination-auto-complete', placeholder: "Source", id: "destination", required: 'required')%>
                             </div>
                           </div>
 
