--- a/app/views/freights/_edit.html.erb
+++ b/app/views/freights/_edit.html.erb
@@ -40,8 +40,8 @@
           <div class="row form-group">
             <div class="col-xs-6">
               <div class="col-md-3">Date From</div>
-              <div class="col-md-6 input-group date">
-                <%= f.text_field "start_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
+              <div class="col-md-6 input-group date" data-provide="datepicker">
+                <%= f.text_field "start_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', 'data-date-format'=> "yyyy/mm/dd" %>
                 <span class="input-group-addon">
                 <i class="fa fa-calendar"></i>
                 </span>
@@ -49,8 +49,8 @@
             </div>
             <div class="col-xs-6">
               <div class="col-md-3">Date To</div>
-              <div class="col-md-6 input-group date">
-                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
+              <div class="col-md-6 input-group date" data-provide="datepicker">
+                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required','data-date-format'=> "yyyy/mm/dd" %>
                 <span class="input-group-addon">
                 <i class="fa fa-calendar"></i>
                 </span>
@@ -81,8 +81,8 @@
 
             <div class="col-xs-6">
               <div class="col-md-3">Cut Off Date</div>
-              <div class="col-md-6 input-group date">
-                <%= f.text_field "cut_off_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', data: { provide: "datepicker"}, 'data-date-format'=> "yyyy/mm/dd" %>
+              <div class="col-md-6 input-group date" data-provide="datepicker">
+                <%= f.text_field "cut_off_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', 'data-date-format'=> "yyyy/mm/dd" %>
                 <span class="input-group-addon">
                 <i class="fa fa-calendar"></i>
                 </span>
