--- a/app/views/freights/new.html.erb
+++ b/app/views/freights/new.html.erb
@@ -63,7 +63,7 @@
                             <div class="col-xs-6">
                               <div class="col-md-3">Date From</div>
                               <div class="col-md-6 input-group date" data-provide="datepicker">
-                                <%= f.text_field "start_date", class: "form-control",  placeholder: "yyyy/mm/dd", required: 'required','data-date-format'=> "yyyy/mm/dd" %>
+                                <%= f.text_field "start_date", class: "form-control",  placeholder: "yyyy/mm/dd", required: 'required','data-date-format'=> "yy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
@@ -72,7 +72,7 @@
                             <div class="col-xs-6">
                               <div class="col-md-3">Date To</div>
                               <div class="col-md-6 input-group date" data-provide="datepicker">
-                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', 'data-date-format'=> "yyyy/mm/dd" %>
+                                <%= f.text_field "end_date", class: "form-control", id: "hm-date", placeholder: "yyyy/mm/dd", required: 'required', 'data-date-format'=> "yy/mm/dd" %>
                                 <span class="input-group-addon">
                                 <i class="fa fa-calendar"></i>
                               </span>
